1.2.0
- v10 compatible version
- Use standard ToolTips

1.1.1
- Add button for players in the chat when a roll is asked

1.1.0
- Add to GM Manager the ability to ask for a roll

1.0.1
- Fix english translation
- Remove sheet's opening by default of a dropped item

1.0.0
- Add compendiums' English translation 

0.9.9
- Improve english translation thanks to Limpar

0.9.8
- Fix issue with color of succes/failure

0.9.7
- Add rollWeaponMacro : click for save with automatic choice, SHIFT + Click for material roll
- Add modifier malus depending of target
- Update chat message design for rolls : difficulty displayed and modifier applied on it, dice result is now displayed
- Add notes tab
- Global design improvement for all sheets

0.9.6
- Add customized dices and Dice So Nice configuration

0.9.5
Technical release to move from Gitlab to Github

0.9.4
Technical release

0.9.3
Technical release

0.9.2
- Images change : pause logo and above left menu
- Add a new GM only windows : display ressources summary for each connected player

0.9.1
- Update to V9 version
- Fix drag and drop in hotbar : no more macro's duplication

0.8.9.4
- Update all opponent data (hitdice and armor malus)
- Add localization of actor and item types
- Fix wrong chat message displayed (#6)

0.8.3
- Add per scene value to ability's usage type

0.8.2
- Fix error during ability deletion

0.8.1
- Fix delete definition item

0.8.0
- Compatible version with Foundry 0.8.6

0.7.3
- Add double advantage and double disadvantage for rolls : Saves, Resources, Weapons, Material of a character
- Update dice roll interface with tooltips
- Change tooltip's design and position for Saves and Resources

0.7.2
- Fix miscellaneous resource

0.7.1
- Fix for Token Action HUD

0.7.0
- Add macros creation and hotbar management
- Refactor to be compatible with Token Action HUD

0.6.3
- Improve chat display

0.6.1
- Automatic descrease if Material roll failed
- Remove rollable if resource at 0

0.6.0
- Template update