@@ -202,8 +202,11 @@
         "FortuneValueHint": "Fortune value available to players",
         "AdrenalineName": "Adrenaline Option",
         "AdrenalineHint": "Allow Adrenaline option",
-        "WealthResourceName": "Wealth Resource Option",
-        "WealthResourceHint": "Handle wealth as a resource",
+        "WealthName": "Wealth s",
+        "WealthHint": "Choose how the wealth resource is managed",
+        "WealthNone": "No wealth management",
+        "WealthFixedValue": "Wealth as a fixed dice value",
+        "WealthResource": "Wealth is managed as a resource",
         "HitDiceResourceName": "Hit Dice Resource Option",
         "HitDiceResourceHint": "Handle hit dice as a resource",
         "MiscellaneousResourceName": "Miscellaneous Resource",
