@@ -202,10 +202,13 @@
         "FortuneValueHint": "Nombre de jetons Fortune restant",
         "AdrenalineName": "Option Adrenaline",
         "AdrenalineHint": "Active la gestion de l'adrénaline",
-        "WealthResourceName": "Richesse en tant que Ressource",
-        "WealthResourceHint": "La richesse est gérée comme une ressource",
+        "WealthName": "Richesse",
+        "WealthHint": "Choisissez comment est gérée la richesse",
+        "WealthNone": "Pas de gestion de la richesse",
+        "WealthFixedValue": "La richesse a une valeur fixe sous forme d'un dé",
+        "WealthResource": "La richesse est gérée comme une ressource",
         "HitDiceResourceName": "Dé de vie en tant que Ressource",
-        "HitDiceResourceHint": "Au lieu d'une valeur fixe, vous pouvez gérer les dégâts d'un personnage avec le Dé de Vie",
+        "HitDiceResourceHint": "Au lieu d'une valeur fixe, vous pouvez gérer les points de vie d'un personnage avec le Dé de Vie",
         "MiscellaneousResourceName": "Ressource diverse",
         "MiscellaneousResourceHint": "Permet de gérer une ressource supplémentaire"
     },
