@@ -6,10 +6,10 @@
   "url": "https://github.com/Qaw/cthulhuhack",
   "license": "LICENSE.txt",
   "flags": {},
-  "version": "1.0.1",
+  "version": "1.2.0",
   "compatibility": {
     "minimum": "10",
-    "verified": "10",
+    "verified": "10.283",
     "maximum": "10"
   },
   "scripts": [],
