@@ -1,72 +1,0 @@
-<div class="resource flex-group-center">
-    <label for="armedDamage.value" class="resource-label armed-damage-name rollable" data-resource="armedDamage">{{localize "CTHACK.ArmedDamage"}}</label>
-    <div class="resource-content">
-        <select name="attributes.armedDamage.value" data-type="String" {{{getStyleForDice system.attributes.armedDamage.value}}} >
-        {{#select system.attributes.armedDamage.value}}
-            {{> "systems/cthack/templates/parts/dice-sides-options-damage.hbs"}}
-        {{/select}}
-        </select>
-    </div>
-</div>
-
-<div class="resource flex-group-center">
-    <label for="unarmedDamage.value" class="resource-label unarmed-damage-name rollable" data-resource="unarmedDamage">{{localize "CTHACK.UnarmedDamage"}}</label>
-    <div class="resource-content">
-        <select name="attributes.unarmedDamage.value" data-type="String" {{{getStyleForDice system.attributes.unarmedDamage.value}}} >
-        {{#select system.attributes.unarmedDamage.value}}
-            {{> "systems/cthack/templates/parts/dice-sides-options-damage.hbs"}}
-        {{/select}}
-        </select>
-    </div>
-</div>
-
-<div class="resource flex-group-center">
-    <label for="wealthDice.value" class="resource-label wealth-name {{#if (isEnabled "WealthResource")}}rollable{{/if}}"  data-resource="wealthDice">{{localize "CTHACK.Wealth"}}</label>
-    <div class="resource-content">
-        <select name="attributes.wealthDice.value" data-type="String" {{{getStyleForDice system.attributes.wealthDice.value}}} >
-            {{#select system.attributes.wealthDice.value}}
-                {{> "systems/cthack/templates/parts/dice-sides-options-value.hbs"}}
-            {{/select}}
-        </select>
-        {{#if (isEnabled "WealthResource")}}
-        <span> / </span>
-        <select name="attributes.wealthDice.max" data-type="String" {{{getStyleForDice system.attributes.wealthDice.max}}}>
-            {{#select system.attributes.wealthDice.max}}
-                {{> "systems/cthack/templates/parts/dice-sides-options-max.hbs"}}
-            {{/select}}
-        </select>
-        {{/if}}
-    </div>
-</div>
-
-{{#if (isEnabled "MiscellaneousResource")}}    
-    <div class="resource flex-group-center">
-        <label for="miscellaneous.value" class="resource-label miscellaneous-name {{#if (isDiceRollable system.attributes.miscellaneous.value)}}rollable{{/if}}"  data-resource="miscellaneous">{{getMiscellaneousValue}}</label>
-        <div class="resource-content">
-            <select name="attributes.miscellaneous.value" data-type="String" {{{getStyleForDice system.attributes.miscellaneous.value}}} >
-                {{#select system.attributes.miscellaneous.value}}
-                    {{> "systems/cthack/templates/parts/dice-sides-options-value.hbs"}}
-                {{/select}}
-            </select>
-            <span> / </span>
-            <select name="attributes.miscellaneous.max" data-type="String" {{{getStyleForDice system.attributes.miscellaneous.max}}}>
-                {{#select system.attributes.miscellaneous.max}}
-                    {{> "systems/cthack/templates/parts/dice-sides-options-max.hbs"}}
-                {{/select}}
-            </select>
-        </div>
-    </div>
-{{else}}
-    {{#unless (isEnabled "HitDiceResource")}}
-        <div class="resource flex-group-center">
-        <label for="hitDice.value" class="resource-label hit-name {{#if (isEnabled "HitDiceResource")}}rollable{{/if}}" data-resource="hitDice">{{localize "CTHACK.HitDice"}}</label>
-            <div class="resource-content">
-                <select name="attributes.hitDice.value" data-type="String" {{{getStyleForDice system.attributes.hitDice.value}}} >
-                    {{#select system.attributes.hitDice.value}}
-                        {{> "systems/cthack/templates/parts/dice-sides-options-value.hbs"}}
-                    {{/select}}
-                </select>
-            </div>
-        </div>
-    {{/unless}}
-{{/if}}
